# Observer

./: Sign_in_with_Google_FastAPI_Guide.docx
backend/: .env.sample  .gitignore  README.md  index.py  pyproject.toml
backend/backend/: app.py  constants.py  main.py
backend/backend/DB/: db_connection.py
backend/backend/controllers/: admin_controllers.py  customer_controllers.py  email_controllers.py  healthcheck_controllers.py  news_controllers.py  notification_controllers.py  product_controllers.py  store_controllers.py  store_owner_controllers.py  user_controllers.py
backend/backend/middlewares/: auth.py  verifyJWT.py
backend/backend/models/: OAuth2Creds.py  __init__.py  admin_model.py  customer_model.py  email_model.py  news_model.py  notification_model.py  product_model.py  store_model.py  store_owner_model.py  user_model.py
backend/backend/routes/: admin_routes.py  customer_routes.py  email_routes.py  g_auth_routes.py  healthcheck_routes.py  news_routes.py  notification_routes.py  product_routes.py  store_owner_routes.py  store_routes.py  test_routes.py  user_routes.py
backend/backend/utils/: crud_utils.py  sanitize.py  token.py
frontend/: index.html  package-lock.json  package.json  test_g_sign_in.html  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: DashboardSkeleton.jsx  Loading.jsx
frontend/src/contexts/: UserContext.jsx
frontend/src/pages/: AdminDashboard.page.jsx  CustomerDashboard.page.jsx  Error.page.jsx  Home.page.jsx  HomePage.jsx  ProfilePage.jsx  SignIn.page.jsx  SignUp.page.jsx  StoreOwnerDashboard.page.jsx
(+23 files in other folders)
